--- a/css/index.css
+++ b/css/index.css
@@ -118,7 +118,9 @@ h4{
 
 .block2_text{
     width: 520px;
-    margin-top: 138px
+    margin-top: 138px;
+    font-family: "PT Sans";
+    font-size: 20px;
 
 }
 
